Commit realizado por democrito88 em 26/11/2019 as 23:03

--- a/src/br/com/metashape/view/BuscarProduto.form
+++ b/src/br/com/metashape/view/BuscarProduto.form
@@ -159,6 +159,7 @@
                 <Column editable="true" title="Status" type="java.lang.Object"/>
               </Table>
             </Property>
+            <Property name="requestFocusEnabled" type="boolean" value="false"/>
           </Properties>
         </Component>
       </SubComponents>
